# spline-navigator

./: CMakeLists.txt  README.md  package.xml
action/: NavigatePath.action
navigator/: navigator.py
spline_navigator/: navigator.py
src/: navigator.py
